Add custom hook for Card Animations

--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,9 @@
 }
 
 @layer components {
-  /* Background */
+  /* BACKGROUND */
   .bg-noisy {
-    background-image: url('src/assets/images/background_noisy.webp');
+    background-image: url("src/assets/images/background_noisy.webp");
     background-repeat: repeat;
   }
 
@@ -33,7 +33,7 @@
   .active-nav-bg {
     @apply bg-slate-400/30 dark:bg-gray-900/50 transition-[background-color] duration-500;
   }
-  /* Buttons */
+  /* BUTTONS */
   .btn-shadow-sm {
     @apply shadow-[3px_3px_#0f172a] dark:shadow-[3px_3px_#0f172a] hover:shadow-[4px_4px];
   }
@@ -47,5 +47,63 @@
   }
   .btn-hover {
     @apply hover:bg-slate-950 dark:hover:bg-slate-950 hover:text-primary-dark hover:shadow-sky-400 dark:hover:shadow-teal-600;
+  }
+
+  /* CARDS ANIMATIONS */
+  .card-hidden {
+    opacity: 0;
+  }
+
+  @keyframes slideInLeft {
+    from {
+      opacity: 0;
+      transform: translateX(-100px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+
+  @keyframes slideInRight {
+    from {
+      opacity: 0;
+      transform: translateX(100px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+
+  .slide-in-left {
+    opacity: 0;
+    animation: slideInLeft 0.6s ease-out forwards;
+  }
+
+  .slide-in-right {
+    opacity: 0;
+    animation: slideInRight 0.6s ease-out forwards;
+  }
+
+  /* Add animation delay for text content */
+  .delay-200 {
+    animation-delay: 200ms;
+  }
+
+  /* MOBILE ANIMATION */
+  @keyframes slideInUp {
+    from {
+      opacity: 0;
+      transform: translateY(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .slide-in-up {
+    animation: slideInUp 0.6s ease-out forwards;
   }
 }
