--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
     background-repeat: repeat;
   }
 
+  /* NAV STYLE TEXT */
   .text-nav {
     @apply text-xs uppercase tracking-widest font-semibold;
   }
@@ -33,6 +34,23 @@
   .active-nav-bg {
     @apply bg-slate-400/30 dark:bg-gray-900/50 transition-[background-color] duration-500;
   }
+  
+  /* POPOUT MESSAGE ANIMATION */
+  @keyframes fadeInDown {
+    from {
+      opacity: 0;
+      transform: translate(-50%, 20px);
+    }
+    to {
+      opacity: 1;
+      transform: translate(-50%, 0);
+    }
+  }
+  
+  .animate-fade-in-down {
+    animation: fadeInDown 0.2s ease-out forwards;
+  }
+
   /* BUTTONS */
   .btn-shadow-sm {
     @apply shadow-[3px_3px_#0f172a] dark:shadow-[3px_3px_#0f172a] hover:shadow-[4px_4px];
