--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 @layer components {
   /* BACKGROUND */
   .bg-noisy {
-    background-image: url("assets/images/background_noisy.webp");
+    background-image: url("/background_noisy.webp");
     background-repeat: repeat;
   }
 
